--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -32,8 +32,8 @@
 
                     <de.hdodenhof.circleimageview.CircleImageView
                         android:id="@+id/photoIv"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
+                        android:layout_width="90dp"
+                        android:layout_height="90dp"
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="5dp"
                         android:layout_marginEnd="5dp"
@@ -44,17 +44,14 @@
                         app:civ_border_color="#FFFFFF"
                         app:civ_border_width="2dp" />
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
                         <TextView
                             android:id="@+id/uIdTv"
-                            android:layout_width="0dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:paddingStart="5dp"
+                            android:paddingEnd="5dp"
                             android:layout_margin="3dp"
-                            android:layout_weight="1"
                             android:background="@drawable/bg_radius"
                             android:backgroundTint="#ffffff"
                             android:elevation="2dp"
@@ -65,7 +62,7 @@
                             android:textSize="10sp"
                             android:textStyle="bold" />
 
-                    </LinearLayout>
+
 
                 </LinearLayout>
 
@@ -80,26 +77,20 @@
                         android:id="@+id/titleTv"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="3dp"
                         android:background="@drawable/bg_radius"
                         android:elevation="2dp"
-                        android:padding="10sp"
+                        android:padding="8sp"
+                        android:layout_margin="2dp"
                         android:text="@string/loading"
                         android:textColor="@color/black"
                         android:textSize="14sp"
                         android:textStyle="bold" />
 
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
                         <TextView
                             android:id="@+id/nodeIdTv"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_margin="3dp"
+                            android:layout_margin="2dp"
                             android:background="@drawable/bg_radius"
                             android:elevation="2dp"
                             android:padding="5sp"
@@ -107,8 +98,6 @@
                             android:textColor="@color/black"
                             android:textSize="12sp"
                             android:textStyle="bold" />
-
-                    </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -119,13 +108,12 @@
                             android:id="@+id/btnShow"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="5dp"
                             android:layout_weight="1"
                             android:backgroundTint="#8BC34A"
                             android:elevation="3dp"
                             android:text="Show"
                             android:textColor="@color/white"
-                            android:textSize="12sp" />
+                            android:textSize="10sp" />
 
 
                         <Button
@@ -136,23 +124,21 @@
                             android:layout_weight="1"
                             android:backgroundTint="#F44336"
                             android:elevation="3dp"
-                            android:padding="5dp"
                             android:text="HIDE"
                             android:textColor="@color/white"
-                            android:textSize="14sp"
+                            android:textSize="10sp"
                             android:visibility="gone" />
 
                         <Button
                             android:id="@+id/btnHtml"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="5dp"
                             android:layout_weight="1"
                             android:backgroundTint="#8BC34A"
                             android:elevation="3dp"
                             android:text="Github"
                             android:textColor="@color/white"
-                            android:textSize="12sp" />
+                            android:textSize="10sp" />
 
                     </LinearLayout>
 
@@ -171,13 +157,35 @@
                     android:id="@+id/btnProFile"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+
                     android:layout_weight="1"
-                    android:backgroundTint="#03A9F4"
+                    android:backgroundTint="#009688"
                     android:elevation="3dp"
-                    android:padding="5dp"
-                    android:text="โปรไฟล์"
+                    android:text="PROFILE"
                     android:textColor="@color/white"
-                    android:textSize="16sp" />
+                    android:textSize="10sp" />
+
+                <Button
+                    android:id="@+id/btnSubScript"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:backgroundTint="#009688"
+                    android:elevation="3dp"
+                    android:text="subscribe"
+                    android:textColor="@color/white"
+                    android:textSize="10sp" />
+
+                <Button
+                    android:id="@+id/btnRepos"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:backgroundTint="#3F51B5"
+                    android:elevation="3dp"
+                    android:text="Repositories"
+                    android:textColor="@color/white"
+                    android:textSize="10sp" />
 
             </LinearLayout>
 
@@ -195,71 +203,31 @@
                     android:layout_weight="1"
                     android:backgroundTint="#8BC34A"
                     android:elevation="3dp"
-                    android:padding="5dp"
-                    android:text="ผู้ติดตาม"
+                    android:text="Follow"
                     android:textColor="@color/white"
-                    android:textSize="16sp" />
+                    android:textSize="10sp" />
 
                 <Button
                     android:id="@+id/btnGist"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
                     android:layout_weight="1"
                     android:backgroundTint="#03A9F4"
                     android:elevation="3dp"
-                    android:padding="5dp"
-                    android:text="กระทู้"
+                    android:text="Gist"
                     android:textColor="@color/white"
-                    android:textSize="16sp" />
+                    android:textSize="10sp" />
 
                 <Button
                     android:id="@+id/btnStared"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
                     android:layout_weight="1"
                     android:backgroundTint="#E91E63"
                     android:elevation="3dp"
-                    android:padding="5dp"
-                    android:text="ให้ดาว"
+                    android:text="Star"
                     android:textColor="@color/white"
-                    android:textSize="16sp" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/linear_4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:visibility="gone">
-
-                <Button
-                    android:id="@+id/btnSubScript"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:layout_weight="1"
-                    android:backgroundTint="#009688"
-                    android:elevation="3dp"
-                    android:padding="5dp"
-                    android:text="สมัครรับข้อมูล"
-                    android:textColor="@color/white"
-                    android:textSize="16sp" />
-
-                <Button
-                    android:id="@+id/btnRepos"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:layout_weight="1"
-                    android:backgroundTint="#3F51B5"
-                    android:elevation="3dp"
-                    android:padding="5dp"
-                    android:text="Repositories"
-                    android:textColor="@color/white"
-                    android:textSize="16sp" />
+                    android:textSize="10sp" />
 
             </LinearLayout>
 
@@ -274,27 +242,23 @@
                     android:id="@+id/btnEvents"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
                     android:layout_weight="1"
                     android:backgroundTint="#D6C213"
                     android:elevation="3dp"
-                    android:padding="5dp"
-                    android:text="กิจกรรม"
+                    android:text="Event"
                     android:textColor="@color/white"
-                    android:textSize="16sp" />
+                    android:textSize="10sp" />
 
                 <Button
                     android:id="@+id/btnReceived"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
                     android:layout_weight="1"
                     android:backgroundTint="#4CAF50"
                     android:elevation="3dp"
-                    android:padding="5dp"
-                    android:text="เหตุการณ์ที่ได้รับ"
+                    android:text="received event"
                     android:textColor="@color/white"
-                    android:textSize="16sp" />
+                    android:textSize="10sp" />
 
             </LinearLayout>
 
