--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -5,16 +5,15 @@
     <data>
         <variable
             name="userData"
-            type="com.nathit.kotlin_retrofit_github.UserModelItem" />
+            type="com.nathit.kotlin_retrofit_github.UserModel" />
     </data>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center">
+        android:layout_height="wrap_content">
 
         <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             app:cardBackgroundColor="#FFFFFF"
@@ -22,7 +21,7 @@
             app:cardElevation="4dp">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="vertical"
@@ -112,29 +111,16 @@
                             android:orientation="horizontal">
 
                             <Button
-                                android:id="@+id/btnShow"
+                                android:id="@+id/btnRepos"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
-                                android:backgroundTint="#8BC34A"
+                                android:backgroundTint="#3F51B5"
                                 android:elevation="3dp"
-                                android:text="Show"
+                                android:text="Repositories"
+                                android:layout_marginStart="5dp"
                                 android:textColor="@color/white"
                                 android:textSize="10sp" />
-
-
-                            <Button
-                                android:id="@+id/btnHide"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginStart="5dp"
-                                android:layout_weight="1"
-                                android:backgroundTint="#F44336"
-                                android:elevation="3dp"
-                                android:text="HIDE"
-                                android:textColor="@color/white"
-                                android:textSize="10sp"
-                                android:visibility="gone" />
 
                             <Button
                                 android:id="@+id/btnHtml"
@@ -142,129 +128,17 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:backgroundTint="#1C1C1C"
+                                android:layout_marginStart="5dp"
                                 android:elevation="3dp"
                                 android:text="Github"
                                 android:textColor="@color/white"
                                 android:textSize="10sp" />
 
+
+
                         </LinearLayout>
 
                     </LinearLayout>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/linear_2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:visibility="gone">
-
-                    <Button
-                        android:id="@+id/btnProFile"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:backgroundTint="#009688"
-                        android:elevation="3dp"
-                        android:text="PROFILE"
-                        android:textColor="@color/white"
-                        android:textSize="10sp" />
-
-                    <Button
-                        android:id="@+id/btnSubScript"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:backgroundTint="#DF7F08"
-                        android:elevation="3dp"
-                        android:text="subscribe"
-                        android:textColor="@color/white"
-                        android:textSize="10sp" />
-
-                    <Button
-                        android:id="@+id/btnRepos"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:backgroundTint="#3F51B5"
-                        android:elevation="3dp"
-                        android:text="Repositories"
-                        android:textColor="@color/white"
-                        android:textSize="10sp" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/linear_3"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:visibility="gone">
-
-                    <Button
-                        android:id="@+id/btnFollow"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:backgroundTint="#8BC34A"
-                        android:elevation="3dp"
-                        android:text="Follow"
-                        android:textColor="@color/white"
-                        android:textSize="10sp" />
-
-                    <Button
-                        android:id="@+id/btnGist"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:backgroundTint="#03A9F4"
-                        android:elevation="3dp"
-                        android:text="Gist"
-                        android:textColor="@color/white"
-                        android:textSize="10sp" />
-
-                    <Button
-                        android:id="@+id/btnStared"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:backgroundTint="#E91E63"
-                        android:elevation="3dp"
-                        android:text="Star"
-                        android:textColor="@color/white"
-                        android:textSize="10sp" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/linear_5"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:visibility="gone">
-
-                    <Button
-                        android:id="@+id/btnEvents"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:backgroundTint="#D6C213"
-                        android:elevation="3dp"
-                        android:text="Event"
-                        android:textColor="@color/white"
-                        android:textSize="10sp" />
-
-                    <Button
-                        android:id="@+id/btnReceived"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:backgroundTint="#4CAF50"
-                        android:elevation="3dp"
-                        android:text="received event"
-                        android:textColor="@color/white"
-                        android:textSize="10sp" />
 
                 </LinearLayout>
 
